Fixed footer align
Fixed footer creating white space

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -108,6 +108,7 @@ Code reference : https://codepen.io/philhoyt/pen/ujHzd
 body {
     background-color: #DFEBF5; !important;
     margin-bottom: 200px;
+    width: 100%;
 }
 
 .container {
@@ -115,6 +116,7 @@ body {
     box-shadow: 5px 0 5px -2px #C0C0C0;
     margin-top: 20px;
     width: 700px;
+    margin-bottom: 20px;
 }
 
 .container h1 {
@@ -128,8 +130,10 @@ body {
 }
 
 footer {
+    float: left;
+    bottom: 0;
     width:100%;
-    bottom:0;
+    margin-bottom: 0;
     display: block;
     background-color: #0078c9;
     background-image: url("../images/footer_bg.png");
@@ -142,6 +146,10 @@ footer {
 .created {
     vertical-align: middle;
     line-height: 200px;
+}
+
+footer .row {
+    margin-right: 0;
 }
 
 .footer-logo {
